--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -15,6 +15,9 @@
         <a [href]="'https://www.instagram.com/'+userName" title="Instagram" target="_blank">
             <img src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt="MythOfSagar" />
         </a>
+        <a [href]="'https://'+userName+'.github.io'" title="Instagram" target="_blank">
+            <img src="https://img.icons8.com/doodle/48/portfolio.png" alt="MythOfSagar" />
+        </a>
         <a [href]="'https://www.github.com/'+userName" title="Github" target="_blank">
             <img src="https://img.icons8.com/fluency/48/github.png" alt="MythOfSagar" />
         </a>
