--- a/src/app/components/youtube-thumbnail/youtube-thumbnail.component.html
+++ b/src/app/components/youtube-thumbnail/youtube-thumbnail.component.html
@@ -49,6 +49,7 @@
 }">
   <custom-thumbnail-button style="border-radius: 50%;" 
 (click)="cropImage()"  
+title="Click to Set Cropped Image"
 [buttonLogo]="'https://i.ibb.co/drRMrXF/images-1-1.png'"
 [isDarkTheme]="isDarkTheme"></custom-thumbnail-button>
 </div>
@@ -96,19 +97,24 @@
 <div class="buttonsDiv">
 
 
-<custom-thumbnail-button  
+<custom-thumbnail-button
 (click)="toggleTheme()"  
 [buttonLogo]="!isDarkTheme
 ? 'https://i.ibb.co/kgJL0rJ/images-q-tbn-ANd9-Gc-Tto6i1-LPYks-QTJ0-Lxyrnk9-AIj-DDAvh-Slajpf-Xfp-SQqc-DCJa-IPhh-OKDY-C01ot39-B96t.png'
 : 'https://www.uplooder.net/img/image/2/addf703a24a12d030968858e0879b11e/moon.svg'"
+
+[title]="!isDarkTheme
+? 'View Dark-Mode Thumbnail'
+: 'View Light-Mode Thumbnail'"
+
 [isDarkTheme]="isDarkTheme"></custom-thumbnail-button>
 
 
 <custom-thumbnail-button  
+[title]="'Download Thumbnail'"
 (click)="downloadAsImage()"  
 [buttonLogo]="'https://i.ibb.co/fHdZzcL/Screenshot-from-2023-05-25-22-37-21.png'"
 [isDarkTheme]="isDarkTheme"></custom-thumbnail-button>
-
 
 </div>
 
