--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,13 +3,13 @@
     'light-mode-footer': !isDarkTheme
   }">
     <hr>
-    <p>Follow for More Websites like this</p>
+    <p>Follow to get More Websites like this</p>
     <hr>
     <div class="social-icons">
         <a [href]="'https://www.twitter.com/'+userName" title="Twitter" target="_blank">
             <img src="https://img.icons8.com/color/48/twitter-circled--v1.png" alt="MythOfSagar" />
         </a>
-        <a [href]="'https://www.linkedin.com/in/'+userName" title="Instagram" target="_blank">
+        <a [href]="'https://www.linkedin.com/in/'+userName" title="LinkedIn" target="_blank">
             <img src="https://img.icons8.com/color/48/linkedin-circled--v1.png" alt="MythOfSagar" />
         </a>
         <a [href]="'https://www.instagram.com/'+userName" title="Instagram" target="_blank">
@@ -21,7 +21,7 @@
         <a [href]="'https://www.github.com/'+userName" title="Github" target="_blank">
             <img src="https://img.icons8.com/fluency/48/github.png" alt="MythOfSagar" />
         </a>
-        <a [href]="'https://www.youtube.com/@'+userName" title="Twitter" target="_blank">
+        <a [href]="'https://www.youtube.com/@'+userName" title="YouTube" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/YouTube_social_red_circle_%282017%29.svg"
                 alt="MythOfSagar" />
         </a>
