--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,23 +7,23 @@
     <hr>
     <div class="social-icons">
         <a [href]="'https://www.twitter.com/'+userName" title="Twitter" target="_blank">
-            <img src="https://img.icons8.com/color/48/twitter-circled--v1.png" alt="MythOfSagar" />
+            <img src="https://img.icons8.com/color/48/twitter-circled--v1.png" alt={{userName}} />
         </a>
         <a [href]="'https://www.linkedin.com/in/'+userName" title="LinkedIn" target="_blank">
-            <img src="https://img.icons8.com/color/48/linkedin-circled--v1.png" alt="MythOfSagar" />
+            <img src="https://img.icons8.com/color/48/linkedin-circled--v1.png" alt={{userName}} />
         </a>
         <a [href]="'https://www.instagram.com/'+userName" title="Instagram" target="_blank">
-            <img src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt="MythOfSagar" />
+            <img src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt={{userName}} />
         </a>
         <a [href]="'https://'+userName+'.github.io'" title="Portfolio" target="_blank">
-            <img src="https://img.icons8.com/doodle/48/portfolio.png" alt="MythOfSagar" />
+            <img src="https://img.icons8.com/doodle/48/portfolio.png" alt={{userName}} />
         </a>
         <a [href]="'https://www.github.com/'+userName" title="Github" target="_blank">
-            <img src="https://img.icons8.com/fluency/48/github.png" alt="MythOfSagar" />
+            <img src="https://img.icons8.com/fluency/48/github.png" alt={{userName}} />
         </a>
         <a [href]="'https://www.youtube.com/@'+userName" title="YouTube" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/YouTube_social_red_circle_%282017%29.svg"
-                alt="MythOfSagar" />
+                alt={{userName}} />
         </a>
     </div>
 </footer>
