--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,22 +7,22 @@
     <hr>
     <div class="social-icons">
         <a [href]="'https://www.twitter.com/'+userName" title="Twitter" target="_blank">
-            <img src="hhttps://img.icons8.com/color/48/twitter-circled--v1.png" alt="twitter/{{userName}}" />
+            <img src="https://img.icons8.com/color/48/twitter-circled--v1.png" alt="twitter/{{userName}}" />
         </a>
         <a [href]="'https://www.linkedin.com/in/'+userName" title="LinkedIn" target="_blank">
-            <img src="hhttps://img.icons8.com/color/48/linkedin-circled--v1.png" alt="linkedin/{{userName}}" />
+            <img src="https://img.icons8.com/color/48/linkedin-circled--v1.png" alt="linkedin/{{userName}}" />
         </a>
         <a [href]="'https://www.instagram.com/'+userName" title="Instagram" target="_blank">
-            <img src="hhttps://img.icons8.com/3d-fluency/94/instagram-new.png" alt="instagram/{{userName}}" />
+            <img src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt="instagram/{{userName}}" />
         </a>
         <a [href]="'https://'+userName+'.github.io'" title="Portfolio" target="_blank">
-            <img src="hhttps://img.icons8.com/doodle/48/portfolio.png" alt="{{userName}}" />
+            <img src="https://img.icons8.com/doodle/48/portfolio.png" alt="{{userName}}" />
         </a>
         <a [href]="'https://www.github.com/'+userName" title="Github" target="_blank">
-            <img src="hhttps://img.icons8.com/fluency/48/github.png" alt="github/{{userName}}" />
+            <img src="https://img.icons8.com/fluency/48/github.png" alt="github/{{userName}}" />
         </a>
         <a [href]="'https://www.youtube.com/@'+userName" title="YouTube" target="_blank">
-            <img src="hhttps://upload.wikimedia.org/wikipedia/commons/a/a0/YouTube_social_red_circle_%282017%29.svg"
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/YouTube_social_red_circle_%282017%29.svg"
                 alt="youtube/{{userName}}" />
         </a>
     </div>
