--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer id="footer" [ngClass]="{
+<!-- <footer id="footer" [ngClass]="{
     'dark-mode-footer': isDarkTheme,
     'light-mode-footer': !isDarkTheme
   }">
@@ -26,4 +26,4 @@
                 alt="youtube/{{userName}}" />
         </a>
     </div>
-</footer>
+</footer> -->
